画面遷移とget

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <input type="text" id="calc_result" value="0">
     </div>
     <hr>
+    <a href="second.html">セカンドページへのリンク</a>
 
 </body>
 
