リンク追加

--- a/third.html
+++ b/third.html
@@ -6,6 +6,7 @@
 
 <body onload="dispParam()">
     <div>これはサードページです</div>
+    <div><a href="index.html">インデックスページへのリンク</a></div>
     <div><a href="second.html">セカンドページに戻る</a></div>
 
     <button onclick="alertParam()">パラメータ</button>
