--- a/fourth.html
+++ b/fourth.html
@@ -7,6 +7,8 @@
 <body>
     <div>Ajaxを使用してjson形式の結果を受け取ってみる</div>
     <div>素のJavaScriptのみ使用</div>
+    <div><a href="index.html">インデックスページへのリンク</a></div>
+
     <button onclick="ajaxTest()">ajax</button>
     <div><span>json = </span><span id="result"></span></div>
     <div><span>id = </span><span id="result_id"></span></div>
