cssページ分割

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         <input type="text" id="calc_result" value="0">
     </div>
     <hr>
-    <a href="second.html">セカンドページへのリンク</a>
-    <a href="fourth.html">フォースページへのリンク</a>
+    <a href="sample_sendparam.html">パラメータ送信画面へのリンク</a>
+    <a href="sample_ajax.html">Ajaxサンプルへのリンク</a>
+    <a href="sample_css.html">cssサンプル</a>
 
 </body>
 
