--- a/sample_getparam.html
+++ b/sample_getparam.html
@@ -5,9 +5,9 @@
 </head>
 
 <body onload="dispParam()">
-    <div>これはサードページです</div>
+    <div>これはget parameterを取得するサンプルページです</div>
     <div><a href="index.html">インデックスページへのリンク</a></div>
-    <div><a href="second.html">セカンドページに戻る</a></div>
+    <div><a href="sample_sendparam.html">パラメータ送信画面に戻る</a></div>
 
     <button onclick="alertParam()">パラメータ</button>
 
