--- a/sample_sendparam.html
+++ b/sample_sendparam.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-        <title>セカンド</title>
+        <title>sendParam</title>
     </head>
     <body>
-        <div>これはセカンドページです。</div>
+        <div>これはパラメータ送信のサンプルです。</div>
 
         <div><a href="index.html">インデックスページへのリンク</a></div>
         <div><a href="item.json">アイテムへのリンク</a></div>
 
-        <form action="third.html">
+        <form action="sample_getparam.html">
             <input type="text" name="hoge" value="hogehoge"/>
             <input type="submit" value="送信">
             <input type="reset" value="クリア">
