--- a/sample_ajax.html
+++ b/sample_ajax.html
@@ -6,8 +6,10 @@
 
 <body>
     <div>Ajaxを使用してjson形式の結果を受け取ってみる</div>
-    <div>素のJavaScriptのみ使用</div>
+    <hr>
     <div><a href="index.html">インデックスページへのリンク</a></div>
+    <div><a href="item.json">アイテムへのリンク</a></div>
+    <hr>
 
     <button onclick="ajaxTest()">ajax</button>
     <div><span>json = </span><span id="result"></span></div>
