--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="sample_css.html">cssサンプル</a></li>
         <li><a href="sample_sendparam.html">パラメータ送信画面へのリンク</a></li>
         <li><a href="sample_ajax.html">Ajaxサンプルへのリンク</a></li>
+        <li><a href="sample_layout.html">レイアウトサンプルへのリンク</a></li>
     </ul>
 </body>
 
