フォルダにまとめた

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>HTMLの勉強</title>
+    <link rel="icon" href="/img/pose_gutspose_couple.png" type="image/png">
 </head>
 
 <body>
@@ -9,11 +10,11 @@
 
     <hr>
     <ul>
-        <li><a href="sample_js.html">jsサンプル</a></li>
-        <li><a href="sample_css.html">cssサンプル</a></li>
-        <li><a href="sample_sendparam.html">パラメータ送信画面へのリンク</a></li>
-        <li><a href="sample_ajax.html">Ajaxサンプルへのリンク</a></li>
-        <li><a href="sample_layout.html">レイアウトサンプルへのリンク</a></li>
+        <li><a href="/sample/sample_js.html">jsサンプル</a></li>
+        <li><a href="/sample/sample_css.html">cssサンプル</a></li>
+        <li><a href="/sample/sample_sendparam.html">パラメータ送信画面へのリンク</a></li>
+        <li><a href="/sample/sample_ajax.html">Ajaxサンプルへのリンク</a></li>
+        <li><a href="/sample/sample_layout.html">レイアウトサンプルへのリンク</a></li>
     </ul>
 </body>
 
