--- a/sample/sample_ajax.html
+++ b/sample/sample_ajax.html
@@ -7,7 +7,7 @@
 <body>
     <div>Ajaxを使用してjson形式の結果を受け取ってみる</div>
     <hr>
-    <div><a href="index.html">インデックスページへのリンク</a></div>
+    <div><a href="/">インデックスページへのリンク</a></div>
     <div><a href="item.json">アイテムへのリンク</a></div>
     <hr>
 
