--- a/sample/sample_css.html
+++ b/sample/sample_css.html
@@ -7,7 +7,7 @@
 <body>
     <div>cssのサンプル</div>
     <hr>
-    <div><a href="index.html">インデックスページへのリンク</a></div>
+    <div><a href="/">インデックスページへのリンク</a></div>
     <hr>
 
 
@@ -49,6 +49,8 @@
             </tr>
         </tbody>
     </table>
+
+    <img src="img/pose_gutspose_couple.png" class="myimg">
     <br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>↓<br>
     あああ
 </body>
@@ -117,5 +119,10 @@
 
     .mytable td {
         border: solid black 1px;
+    }
+
+    .myimg {
+        width: 200px;
+        height: 200px;
     }
 </style>
