--- a/sample/sample_js.html
+++ b/sample/sample_js.html
@@ -7,7 +7,7 @@
 <body>
     <div>JavaScriptのサンプル</div>
     <hr>
-    <div><a href="index.html">インデックスページへのリンク</a></div>
+    <div><a href="/">インデックスページへのリンク</a></div>
     <hr>
     <button onclick="hoge()">hoge</button>
    
