--- a/sample/sample_sendparam.html
+++ b/sample/sample_sendparam.html
@@ -7,7 +7,7 @@
 <body>
     <div>これはパラメータ送信のサンプルです。</div>
     <hr>
-    <div><a href="index.html">インデックスページへのリンク</a></div>
+    <div><a href="/">インデックスページへのリンク</a></div>
     <hr>
 
     <form action="sample_getparam.html">
