--- a/sample/sample_getparam.html
+++ b/sample/sample_getparam.html
@@ -7,7 +7,7 @@
 <body onload="dispParam()">
     <div>これはget parameterを取得するサンプルページです</div>
     <hr>
-    <div><a href="index.html">インデックスページへのリンク</a></div>
+    <div><a href="/">インデックスページへのリンク</a></div>
     <div><a href="sample_sendparam.html">パラメータ送信画面に戻る</a></div>
     <hr>
 
