--- a/sample/sample_layout.html
+++ b/sample/sample_layout.html
@@ -7,8 +7,8 @@
 <body>
     <div class="nav">
         <ul>
-            <li><a href="index.html">index</a></li>
-            <li><a href="sample_layout.html">layout</a></li>
+            <li><a href="/">index</a></li>
+            <li><a href="#">layout</a></li>
         </ul>
     </div>
     <div class="content">
