ファイル名変更

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <hr>
     <ul>
-        <li><a href="/sample/sample_js.html">jsサンプル</a></li>
-        <li><a href="/sample/sample_css.html">cssサンプル</a></li>
-        <li><a href="/sample/sample_sendparam.html">パラメータ送信画面へのリンク</a></li>
-        <li><a href="/sample/sample_ajax.html">Ajaxサンプルへのリンク</a></li>
-        <li><a href="/sample/sample_layout.html">レイアウトサンプルへのリンク</a></li>
+        <li><a href="/sample/js.html">jsサンプル</a></li>
+        <li><a href="/sample/css.html">cssサンプル</a></li>
+        <li><a href="/sample/sendparam.html">パラメータ送信画面へのリンク</a></li>
+        <li><a href="/sample/ajax.html">Ajaxサンプルへのリンク</a></li>
+        <li><a href="/sample/layout.html">レイアウトサンプルへのリンク</a></li>
     </ul>
 </body>
 
