--- a/sample/getparam.html
+++ b/sample/getparam.html
@@ -8,7 +8,7 @@
     <div>これはget parameterを取得するサンプルページです</div>
     <hr>
     <div><a href="/">インデックスページへのリンク</a></div>
-    <div><a href="sample_sendparam.html">パラメータ送信画面に戻る</a></div>
+    <div><a href="sendparam.html">パラメータ送信画面に戻る</a></div>
     <hr>
 
     <div>あなたが送信したパラメータは</div>
