--- a/sample/sendparam.html
+++ b/sample/sendparam.html
@@ -10,7 +10,7 @@
     <div><a href="/">インデックスページへのリンク</a></div>
     <hr>
 
-    <form action="sample_getparam.html">
+    <form action="getparam.html">
         <div>
             ID<input type="text" name="hoge_txt" value="hogehoge" />
         </div>
